# ddp-base-model-from-scratch

./: .gitignore  LICENSE  README.md  checkpointing.py  ddp_train.py  gpt.py  hf_model_wrapper.py  hf_train.ipynb  ift_generate_test_responses.py  ift_judge.py  main.py  prepare_datasets.py  pyproject.toml  setup_lambda.sh  test_ift.py  test_loss.py  test_lr_schedulers.py  test_smoke.py  upload_model.py
hf_wrapper/: configuration_gpjtgpt2.py  modeling_gpjtgpt2.py
hf_wrapper/templates/: README.md
runs/1xgtx1660-stacked-interventions/: train.json
runs/1xrtx3090-baseline/: train.json
runs/1xrtx3090-stacked-interventions/: train.json
runs/1xrtx3090-stacked-interventions-1xgtx1660-clone/: model.json
runs/8xa100m40/: train.json
runs/8xa100m40-baseline/: train.json
runs/8xa100m40-gradient-clipping/: train.json
runs/8xa100m40-qkv-bias/: model.json
runs/8xa100m40-remove-dropout/: train.json
runs/8xa100m40-schedule-learning-rate/: train.json
runs/8xa100m40-stacked-interventions-1/: model.json  train.json
runs/8xa100m40-stacked-interventions-3/: model.json  train.json
runs/8xa100m40-update-learning-rate/: train.json
runs/8xa100m40-weight-decay-cerebras/: train.json
runs/8xa100m40-weight-decay-cerebras-scheduling-and-increasing-learning-rate/: train.json
runs/8xa100m40-weight-decay-cerebras-scheduling-learning-rate/: train.json
runs/8xa100m40-weight-decay-gpt2/: train.json
runs/8xa100m40-weight-tying/: model.json
runs/8xa100m80/: train.json
runs/8xa100m80-no-amp/: train.json
runs/8xb200m160/: train.json
runs/8xh100m80/: train.json
(+3 files in other folders)
